[package]
name = "immortal"
version = "0.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "A *nix cross-platform (OS agnostic) supervisor"
documentation = "https://immortal.run"
homepage = "https://immortal.run"
repository = "https://github.com/immortal/rust"
readme = "README.md"
keywords = ["supervisor", "daemon", "process", "restart", "logging"]
categories = ["command-line-utilities", "os", "config"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "immortal/immortal", branch = "master" }

[dependencies]
clap = "2"
rustc-serialize = "0.3"
nix = "0.20.2"
